--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "genealabs/laravel-caffeine": "^0.6.11",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
@@ -56,4 +57,6 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true
+
+    
 }
